
package com.openclassrooms.entrevoisins.neighbour_list;

import android.support.test.espresso.action.GeneralClickAction;
import android.support.test.espresso.action.ViewActions;
import android.support.test.espresso.contrib.RecyclerViewActions;
import android.support.test.espresso.matcher.ViewMatchers;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;

import com.openclassrooms.entrevoisins.R;
import com.openclassrooms.entrevoisins.di.DI;
import com.openclassrooms.entrevoisins.service.NeighbourApiService;
import com.openclassrooms.entrevoisins.ui.neighbour_list.ListNeighbourActivity;
import com.openclassrooms.entrevoisins.ui.neighbour_list.NeighbourDetailsActivity;
import com.openclassrooms.entrevoisins.utils.DeleteViewAction;

import org.hamcrest.Matcher;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.action.ViewActions.swipeLeft;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.assertThat;
import static android.support.test.espresso.matcher.ViewMatchers.hasMinimumChildCount;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.openclassrooms.entrevoisins.utils.RecyclerViewItemCountAssertion.withItemCount;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.core.IsNull.notNullValue;



/**
 * Test class for list of neighbours
 */
@RunWith(AndroidJUnit4.class)
public class NeighboursListTest {

    // This is fixed
    private static int ITEMS_COUNT = 12;

    private ListNeighbourActivity mActivity;
    private NeighbourApiService mApiService;
    @Rule
    public ActivityTestRule<ListNeighbourActivity> mActivityRule =
            new ActivityTestRule(ListNeighbourActivity.class);

    @Before
    public void setUp() {
        mActivity = mActivityRule.getActivity();
        assertThat(mActivity, notNullValue());
        mApiService = DI.getNeighbourApiService();
        assertThat(mApiService, notNullValue());

    }

    /**
     * We ensure that our recyclerview is displaying at least on item
     */
    @Test
    public void myNeighboursList_shouldNotBeEmpty() {
        // First scroll to the position that needs to be matched and click on it.
        onView(getViewByContentDescription("layout1"))
                .check(matches(hasMinimumChildCount(1)));
    }

    /**
     * When we delete an item, the item is no more shown
     */
    @Test
    public void myNeighboursList_deleteAction_shouldRemoveItem() {
        // Given : We remove the element at position 2
        onView(getViewByContentDescription("layout1")).check(withItemCount(ITEMS_COUNT));
        // When perform a click on a delete icon
        onView(getViewByContentDescription("layout1"))
                .perform(RecyclerViewActions.actionOnItemAtPosition(1, new DeleteViewAction()));
        // Then : the number of element is 11
        onView(getViewByContentDescription("layout1")).check(withItemCount(ITEMS_COUNT-1));
    }
    @Test
    public void NeighboursList_clickAction_shouldShowitemDetails(){
        onView(getViewByContentDescription("layout1")).check(matches(isDisplayed()));
        onView(getViewByContentDescription("layout1")).perform(RecyclerViewActions.actionOnItemAtPosition(1,click()));
        onView(withId(R.id.details)).check(matches(isDisplayed()));
    }
    @Test
    public void Neighbourname_shouldbefilled() {
        onView(getViewByContentDescription("layout1")).check(matches(isDisplayed()));
        onView(getViewByContentDescription("layout1")).perform(RecyclerViewActions.actionOnItemAtPosition(0,click()));
        String mNeighbourname = mApiService.getNeighbours().get(0).getName();
        onView(withId(R.id.item_list_name)).check(matches(withText(mNeighbourname)));
    }
    @Test
    public void FavoriteFragment_shouldbefilledwithfavoriteNeighbours() {
        onView(getViewByContentDescription("layout1")).check(matches(isDisplayed()));
        onView(getViewByContentDescription("layout1")).perform(RecyclerViewActions.actionOnItemAtPosition(0,click()));
        onView(withId(R.id.addToFavorit)).perform(click());
        pressBack();
        swipeLeft();
        onView(getViewByContentDescription("layout2")).check(withItemCount(1));
    }
    private static Matcher<View> getViewByContentDescription(String contentDescription) {
        return allOf(withId(R.id.list_neighbours), withContentDescription(contentDescription));
    }


}